logs/tsutil.log
Listing '.'...
Listing './bin'...
Compiling './bin/chardetect.py'...
***   File "./bin/chardetect.py", line 36
    print description_of(stdin)
                       ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chardet'...
Compiling './lib/python3.5/site-packages/chardet/chardistribution.py'...
***   File "./lib/python3.5/site-packages/chardet/chardistribution.py", line 48
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/charsetgroupprober.py'...
***   File "./lib/python3.5/site-packages/chardet/charsetgroupprober.py", line 44
    prober.active = constants.True
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/constants.py'...
***   File "./lib/python3.5/site-packages/chardet/constants.py", line 46
    False = __builtin__.False
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/escprober.py'...
***   File "./lib/python3.5/site-packages/chardet/escprober.py", line 48
    codingSM.active = constants.True
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/jpcntx.py'...
***   File "./lib/python3.5/site-packages/chardet/jpcntx.py", line 132
    self._mDone = constants.False # If this flag is set to constants.True, detection is done and conclusion has been made
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langbulgarianmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langbulgarianmodel.py", line 218
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langcyrillicmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langcyrillicmodel.py", line 287
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langgreekmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langgreekmodel.py", line 215
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langhebrewmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langhebrewmodel.py", line 199
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langhungarianmodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langhungarianmodel.py", line 215
    'keepEnglishLetter': constants.True,
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/langthaimodel.py'...
***   File "./lib/python3.5/site-packages/chardet/langthaimodel.py", line 198
    'keepEnglishLetter': constants.False,
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/sbcharsetprober.py'...
***   File "./lib/python3.5/site-packages/chardet/sbcharsetprober.py", line 42
    def __init__(self, model, reversed=constants.False, nameProber=None):
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/sbcsgroupprober.py'...
***   File "./lib/python3.5/site-packages/chardet/sbcsgroupprober.py", line 59
    logicalHebrewProber = SingleByteCharSetProber(Win1255HebrewModel, constants.False, hebrewProber)
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chardet/universaldetector.py'...
***   File "./lib/python3.5/site-packages/chardet/universaldetector.py", line 54
    self.done = constants.False
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chardet-2.1.1.egg-info'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tsutil'...
Compiling './lib/python3.5/site-packages/tsutil/daemonize.py'...
***   File "./lib/python3.5/site-packages/tsutil/daemonize.py", line 19
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tsutil/enum.py'...
***   File "./lib/python3.5/site-packages/tsutil/enum.py", line 16
    raise TypeError, "Enumeration base class must be enumeration"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tsutil/sync.py'...
***   File "./lib/python3.5/site-packages/tsutil/sync.py", line 22
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tsutil-0.1.6.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
